--- a/ShadowBuild/ShadowBuild.csproj
+++ b/ShadowBuild/ShadowBuild.csproj
@@ -33,6 +33,8 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -41,11 +43,30 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Events\Event.cs" />
+    <Compile Include="Exceptions\EventNameIsAlreadyUsedException.cs" />
+    <Compile Include="Exceptions\EventNotFoundException.cs" />
+    <Compile Include="Objects\Collisions\Collider.cs" />
+    <Compile Include="Objects\Collisions\ColliderShape.cs" />
+    <Compile Include="Objects\Dimensions\_2Dsize.cs" />
+    <Compile Include="Objects\Texturing\ColorTexture.cs" />
+    <Compile Include="Objects\Texturing\GridTexture.cs" />
+    <Compile Include="Objects\Texturing\RegularTexture.cs" />
+    <Compile Include="Objects\_2Dobject.cs" />
+    <Compile Include="Objects\GameObject.cs" />
+    <Compile Include="GameWindow.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Input\Keyboard.cs" />
     <Compile Include="Input\Mouse.cs" />
+    <Compile Include="Objects\Texturing\EmptyTexture.cs" />
+    <Compile Include="Objects\_2DobjectResizeable.cs" />
     <Compile Include="Render.cs" />
     <Compile Include="ShadowBuildProject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Window\Resolution.cs" />
+    <Compile Include="Window\WindowType.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
