--- a/ShadowBuild/ShadowBuild.csproj
+++ b/ShadowBuild/ShadowBuild.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Render.cs" />
     <Compile Include="ShadowBuildProject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\Ticker.cs" />
     <Compile Include="Window\Resolution.cs" />
     <Compile Include="Window\WindowType.cs" />
   </ItemGroup>
