--- a/ShadowBuild/ShadowBuild.csproj
+++ b/ShadowBuild/ShadowBuild.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Exceptions\EventNameIsAlreadyUsedException.cs" />
     <Compile Include="Exceptions\EventNotFoundException.cs" />
     <Compile Include="Exceptions\TickerFrequencyEqualsZeroException.cs" />
+    <Compile Include="Log.cs" />
     <Compile Include="Objects\Collisions\Collider.cs" />
     <Compile Include="Objects\Collisions\ColliderShape.cs" />
     <Compile Include="Objects\Dimensions\_2Dsize.cs" />
