Begining of rendering GameObjects and Textures

--- a/ShadowBuild/ShadowBuild.csproj
+++ b/ShadowBuild/ShadowBuild.csproj
@@ -31,6 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PresentationCore" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -55,6 +56,7 @@
     <Compile Include="Objects\Texturing\ColorTexture.cs" />
     <Compile Include="Objects\Texturing\GridTexture.cs" />
     <Compile Include="Objects\Texturing\RegularTexture.cs" />
+    <Compile Include="Objects\Texturing\TextureMode.cs" />
     <Compile Include="Objects\_2Dobject.cs" />
     <Compile Include="Objects\GameObject.cs" />
     <Compile Include="GameWindow.cs">
