--- a/ShadowBuild/ShadowBuild.csproj
+++ b/ShadowBuild/ShadowBuild.csproj
@@ -67,7 +67,7 @@
     <Compile Include="Render.cs" />
     <Compile Include="ShadowBuildProject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Utils\Ticker.cs" />
+    <Compile Include="Time.cs" />
     <Compile Include="Window\Resolution.cs" />
     <Compile Include="Window\WindowType.cs" />
   </ItemGroup>
