--- a/ShadowBuild/ShadowBuild.csproj
+++ b/ShadowBuild/ShadowBuild.csproj
@@ -46,8 +46,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Events\Event.cs" />
+    <Compile Include="Exceptions\AxisNotFoundException.cs" />
     <Compile Include="Exceptions\EventNameIsAlreadyUsedException.cs" />
     <Compile Include="Exceptions\EventNotFoundException.cs" />
+    <Compile Include="Input\Axis\Axis.cs" />
+    <Compile Include="Input\Axis\KeyboardAxis.cs" />
     <Compile Include="Log.cs" />
     <Compile Include="Objects\Collisions\Collider.cs" />
     <Compile Include="Objects\Dimensions\Shape.cs" />
