--- a/ShadowBuild/ShadowBuild.csproj
+++ b/ShadowBuild/ShadowBuild.csproj
@@ -52,7 +52,7 @@
     <Compile Include="Input\Axis\Axis.cs" />
     <Compile Include="Input\Axis\KeyboardAxis.cs" />
     <Compile Include="Log.cs" />
-    <Compile Include="Objects\Collisions\Collider.cs" />
+    <Compile Include="Objects\Collision.cs" />
     <Compile Include="Objects\Dimensions\Shape.cs" />
     <Compile Include="Objects\Dimensions\_2Dsize.cs" />
     <Compile Include="Objects\Texturing\ColorTexture.cs" />
