--- a/ShadowBuild/ShadowBuild.csproj
+++ b/ShadowBuild/ShadowBuild.csproj
@@ -45,6 +45,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Rendering\Camera.cs" />
     <Compile Include="Events\Event.cs" />
     <Compile Include="Exceptions\AxisNotFoundException.cs" />
     <Compile Include="Exceptions\EventNameIsAlreadyUsedException.cs" />
@@ -67,10 +68,10 @@
     <Compile Include="Input\Mouse.cs" />
     <Compile Include="Objects\Texturing\Texture.cs" />
     <Compile Include="Objects\_2DobjectResizeable.cs" />
-    <Compile Include="Render.cs" />
+    <Compile Include="Rendering\Render.cs" />
     <Compile Include="ShadowBuildProject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Time.cs" />
+    <Compile Include="Loop.cs" />
     <Compile Include="Window\Resolution.cs" />
     <Compile Include="Window\WindowType.cs" />
   </ItemGroup>
