--- a/ShadowBuild/ShadowBuild.csproj
+++ b/ShadowBuild/ShadowBuild.csproj
@@ -50,15 +50,14 @@
   <ItemGroup>
     <Compile Include="Config\ConfigSavable.cs" />
     <Compile Include="Config\ConfigType.cs" />
-    <Compile Include="Exceptions\LayerNameIsAlreadyUsedException.cs" />
-    <Compile Include="Exceptions\LayerZIndexIsAlreadyUsedException.cs" />
+    <Compile Include="Exceptions\ConfigException.cs" />
+    <Compile Include="Exceptions\LayerException.cs" />
     <Compile Include="Input\Axis\MouseAxis.cs" />
     <Compile Include="Objects\Animationing\Animation.cs" />
     <Compile Include="Rendering\Camera.cs" />
     <Compile Include="Events\Event.cs" />
-    <Compile Include="Exceptions\AxisNotFoundException.cs" />
-    <Compile Include="Exceptions\EventNameIsAlreadyUsedException.cs" />
-    <Compile Include="Exceptions\EventNotFoundException.cs" />
+    <Compile Include="Exceptions\AxisException.cs" />
+    <Compile Include="Exceptions\EventException.cs" />
     <Compile Include="Input\Axis\Axis.cs" />
     <Compile Include="Input\Axis\KeyboardAxis.cs" />
     <Compile Include="Log.cs" />
