--- a/ShadowBuild/ShadowBuild.csproj
+++ b/ShadowBuild/ShadowBuild.csproj
@@ -76,7 +76,7 @@
     <Compile Include="Input\Keyboard.cs" />
     <Compile Include="Input\Mouse.cs" />
     <Compile Include="Objects\Texturing\Texture.cs" />
-    <Compile Include="Objects\_2DobjectResizeable.cs" />
+    <Compile Include="Objects\_2DobjectResizable.cs" />
     <Compile Include="Rendering\DefaultCameraMode.cs" />
     <Compile Include="Rendering\Layer.cs" />
     <Compile Include="Rendering\Render.cs" />
