--- a/ShadowBuild/ShadowBuild.csproj
+++ b/ShadowBuild/ShadowBuild.csproj
@@ -85,7 +85,7 @@
     <Compile Include="ShadowBuildProject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Loop.cs" />
-    <Compile Include="ShadowBuildProjectConfig.cs" />
+    <Compile Include="ProjectConfig.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="GameWindow.resx">
