--- a/src/ShadowBuild/ShadowBuild.csproj
+++ b/src/ShadowBuild/ShadowBuild.csproj
@@ -97,6 +97,7 @@
     <Compile Include="Objects\World.cs" />
     <Compile Include="Exceptions\WorldNameException.cs" />
     <Compile Include="Rendering\Display.cs" />
+    <Compile Include="Objects\UI\UIPositionType.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="GameWindow.resx">
