--- a/src/ShadowBuild/ShadowBuild.csproj
+++ b/src/ShadowBuild/ShadowBuild.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="WindowsBase" />
+    <Reference Include="System.Windows" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Config\ConfigSavable.cs" />
@@ -98,6 +99,9 @@
     <Compile Include="Exceptions\WorldNameException.cs" />
     <Compile Include="Rendering\Display.cs" />
     <Compile Include="Objects\UI\UIPositionType.cs" />
+    <Compile Include="Sound\Sound.cs" />
+    <Compile Include="Sound\SoundInstance.cs" />
+    <Compile Include="Exceptions\SoundException.cs" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="GameWindow.resx">
@@ -107,6 +111,9 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Sound\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
