--- a/src/ShadowEngine/ShadowEngine.csproj
+++ b/src/ShadowEngine/ShadowEngine.csproj
@@ -91,7 +91,7 @@
     <Compile Include="Objects\_2Dobject.cs" />
     <Compile Include="Rendering\Layer.cs" />
     <Compile Include="Rendering\Render.cs" />
-    <Compile Include="ShadowBuildProject.cs" />
+    <Compile Include="ShadowEngine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Loop.cs" />
     <Compile Include="ProjectConfig.cs" />
@@ -116,7 +116,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="LICENSE ShadowBuild.txt">
+    <Content Include="Include\LICENSE ShadowEngine.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
