Moved license to root directory

--- a/src/ShadowEngine/ShadowEngine.csproj
+++ b/src/ShadowEngine/ShadowEngine.csproj
@@ -116,7 +116,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Include\LICENSE ShadowEngine.txt">
+    <Content Include="LICENSE ShadowEngine.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
