Changed lists to collections

--- a/src/ShadowEngine/ShadowEngine.csproj
+++ b/src/ShadowEngine/ShadowEngine.csproj
@@ -113,6 +113,7 @@
   <ItemGroup>
     <EmbeddedResource Include="GameWindow.resx">
       <DependentUpon>GameWindow.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
